--- a/index.html
+++ b/index.html
@@ -2,10 +2,27 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width">
+        <meta name="viewport"    content="width=device-width, initial-scale=1">
+        <meta name="description" content="@todo">
+        <meta name="author"      content="@todo">
+        <meta name="keywords"    content="@todo">
+
         <title>Cregane Hall</title>
+
+        <link rel="stylesheet" href="./assets/stylesheets/styles.css"
+              type="text/css"  media="screen" charset="utf-8">
+
+        <!--[if lt IE 9]>
+            <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+        <![endif]-->
     </head>
     <body>
-        <p>Hello, world!</p>
+        <div class="container-fluid">
+            <p>Hello, world!</p>
+        </div>
+
+    <script src="./assets/javascripts/jquery.min.js"></script>
+    <script src="./assets/javascripts/bootstrap.min.js"></script>
+    <script src="./assets/javascripts/app.js"></script>
     </body>
 </html>
