add basic layout, comment stubs - mobile first

--- a/index.html
+++ b/index.html
@@ -18,7 +18,57 @@
     </head>
     <body>
         <div class="container-fluid">
-            <p>Hello, world!</p>
+
+            <!-- header -->
+            <div id="menu-wrapper">
+                <div id="menu-logo">
+                    <p>Bar chart</p>
+                    <h4>Cregane Hall</h4>
+                </div>
+                <div id="menu">
+                    <p>Menu</p>
+                </div>
+            </div>
+
+            <!-- About -->
+            <div id="about-wrapper">
+                <div id="about-logo">
+                    <p>Bar chart</p>
+                    <h4>About Cregane Hall</h4>
+                </div>
+
+                <div id="about-text">
+                    <p> 
+                        Lorem ipsum dolor sit amet, consectetur adipisicing
+                        elit, sed do eiusmod tempor incididunt ut labore et dolore
+                        magna aliqua. Ut enim ad minim veniam, quis nostrud
+                        exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                        consequat. Duis aute irure dolor in reprehenderit in
+                        voluptate velit esse cillum dolore eu fugiat nulla
+                        pariatur. Excepteur sint occaecat cupidatat non proident,
+                        sunt in culpa qui officia deserunt mollit anim id est
+                        laborum.  
+                    </p>
+                </div>
+
+                <div id="about-carousel">
+                    <p>Carousel</p>
+                </div>
+
+                <div id="about-footer">
+                    <h4 id="address">Farranlea Road, Bishopstown, Cork.</h4>
+                    <h5 id="call-us">Call us on: 353 - (0)21 4871029</h5>
+                    <h5 id="email-us">Email us:  info@creganehall.com</h5>
+                </div>
+
+            </div>
+
+            <!-- Rooms -->
+            <!-- Rates -->
+            <!-- Facilities -->
+            <!-- Location -->
+            <!-- Contact Us -->
+
         </div>
 
     <script src="./assets/javascripts/jquery.min.js"></script>
