add remaining template  stubs

--- a/index.html
+++ b/index.html
@@ -64,11 +64,103 @@
             </div>
 
             <!-- Rooms -->
-            <!-- Rates -->
-            <!-- Facilities -->
-            <!-- Location -->
-            <!-- Contact Us -->
+            <div id="rooms-wrapper">
+                <div id="room-image">
+                    <p>image</p>
+                    <p>text</p>
+                </div>
 
+                <div id="room-title">
+                    <h4>The Rooms</h4>
+                </div>
+
+                <div id="rooms-4-way-img">
+                    <p>4 images</p>
+                </div>
+            </div>
+
+            <!-- Enquire now !MOBILE ONLY! !-->
+            <div id="enquire-wrapper" class="hidden-sm hidden-md hidden-lg">
+                <p>Contact form</p>
+            </div>
+
+            <!-- Rates -->
+            <div id="rates-wrapper">
+                <div id="rates-head">
+                    <h4>The Rates</h4>
+                    <p> 
+                        Lorem ipsum dolor sit amet, consectetur adipisicing
+                        elit, sed do eiusmod tempor incididunt ut labore et dolore
+                        magna aliqua. Ut enim ad minim veniam, quis nostrud
+                        exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                        consequat. Duis aute irure dolor in reprehenderit in
+                        voluptate velit esse cillum dolore eu fugiat nulla
+                        pariatur. Excepteur sint occaecat cupidatat non proident,
+                        sunt in culpa qui officia deserunt mollit anim id est
+                        laborum.  
+                    </p>
+                </div>
+
+                <div id="rates-table">
+                    <p>table</p>
+                </div>
+            </div>
+
+            <!-- Facilities -->
+            <div id="facilities-wrapper">
+                <div id="facilities-title">
+                    <h4>The Facilities</h4>
+                </div>
+
+                <div id="major-icons">
+                    <p>major icons</p>
+                </div>
+
+                <div id="minor-icons">
+                    <p>minor icons</p>
+                </div>
+            </div>
+
+            <!-- Location -->
+            <div id="location-wrapper">
+                <div id="location-title">
+                    <div id="location-title">
+                        <h4>The Location</h4>
+                    </div>
+
+                    <div id="location-map">
+                        <p>Map</p>
+                    </div>
+
+                    <p> 
+                        Lorem ipsum dolor sit amet, consectetur adipisicing
+                        elit, sed do eiusmod tempor incididunt ut labore et dolore
+                        magna aliqua. Ut enim ad minim veniam, quis nostrud
+                        exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                        consequat. Duis aute irure dolor in reprehenderit in
+                        voluptate velit esse cillum dolore eu fugiat nulla
+                        pariatur. Excepteur sint occaecat cupidatat non proident,
+                        sunt in culpa qui officia deserunt mollit anim id est
+                        laborum.  
+                    </p>
+
+                    <div id="walking-times">
+                        <h5>Walking times</h5>
+                        <p>Walking icons</p>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Contact Us -->
+            <div id="contact-us-wrapper">
+                <div id="contact-title">
+                    <h4>Contact Us</h4>
+                </div>
+
+                <div id="contact-form">
+                    <p>form</p>
+                </div>
+            </div>
         </div>
 
     <script src="./assets/javascripts/jquery.min.js"></script>
