--- a/index.html
+++ b/index.html
@@ -20,24 +20,29 @@
         <div class="container-fluid">
 
             <!-- header -->
-            <div id="menu-wrapper">
-                <div id="menu-logo">
-                    <p>Bar chart</p>
-                    <h4>Cregane Hall</h4>
+            <div id="menu-wrapper" class="container-fluid">
+                <div id="menu-logo" class="col-xs-10 col-xs-offset-1">
+                    <div class="col-xs-6 col-xs-offset-3">
+                        <p>Bar chart</p>
+                    </div>
+                    <div class="col-xs-8 col-xs-offset-2">
+                        <h4>Cregane Hall</h4>
+                    </div>
                 </div>
-                <div id="menu">
+
+                <div id="menu" class="col-xs-10 col-xs-offset-1">
                     <p>Menu</p>
                 </div>
             </div>
 
             <!-- About -->
-            <div id="about-wrapper">
-                <div id="about-logo">
+            <div id="about-wrapper" class="container-fluid">
+                <div id="about-logo" class="col-xs-10 col-xs-offset-1">
                     <p>Bar chart</p>
                     <h4>About Cregane Hall</h4>
                 </div>
 
-                <div id="about-text">
+                <div id="about-text" class="col-xs-10 col-xs-offset-1">
                     <p> 
                         Lorem ipsum dolor sit amet, consectetur adipisicing
                         elit, sed do eiusmod tempor incididunt ut labore et dolore
@@ -51,42 +56,69 @@
                     </p>
                 </div>
 
-                <div id="about-carousel">
+                <div id="about-carousel" class="col-xs-12">
                     <p>Carousel</p>
                 </div>
 
                 <div id="about-footer">
-                    <h4 id="address">Farranlea Road, Bishopstown, Cork.</h4>
-                    <h5 id="call-us">Call us on: 353 - (0)21 4871029</h5>
-                    <h5 id="email-us">Email us:  info@creganehall.com</h5>
+                    <div class="col-xs-10 col-xs-offset-1">
+                        <h4 id="address">Farranlea Road, Bishopstown, Cork.</h4>
+                    </div>
+                    <div class="col-xs-8 col-xs-offset-2">
+                        <h5 id="call-us">Call us on: 353 - (0)21 4871029</h5>
+                        <h5 id="email-us">Email us:  info@creganehall.com</h5>
+                    </div>
                 </div>
 
             </div>
 
             <!-- Rooms -->
-            <div id="rooms-wrapper">
+            <div id="rooms-wrapper" class="container-fluid">
                 <div id="room-image">
-                    <p>image</p>
-                    <p>text</p>
+                    <div class="col-xs-12">
+                        <p>image</p>
+                    </div>
+                    <div class="col-xs-10 col-xs-offset-1">
+                        <p>
+                            Lorem ipsum dolor sit amet, consetetur sadipscing
+                            elitr, sed diam nonumy eirmod tempor invidunt ut
+                            labore et dolore magna aliquyam erat, sed diam
+                            voluptua. At vero eos et accusam et justo duo
+                            dolores et ea rebum. Stet clita kasd gubergren, no
+                            sea takimata sanctus est Lorem ipsum dolor sit
+                            amet. 
+                        </p>
+                    </div>
                 </div>
 
                 <div id="room-title">
-                    <h4>The Rooms</h4>
+                    <div class="col-xs-10 col-xs-offset-1">
+                        <h4>The Rooms</h4>
+                    </div>
                 </div>
 
                 <div id="rooms-4-way-img">
-                    <p>4 images</p>
+                    <div class="row">
+                        <div class="col-xs-6">one</div>
+                        <div class="col-xs-6">two</div>
+                    </div>
+                    <div class="row">
+                        <div class="col-xs-6">three</div>
+                        <div class="col-xs-6">four</div>
+                    </div>
                 </div>
             </div>
 
             <!-- Enquire now !MOBILE ONLY! !-->
             <div id="enquire-wrapper" class="hidden-sm hidden-md hidden-lg">
-                <p>Contact form</p>
+                <div class="col-xs-10 col-xs-offset-1">
+                    <p>enquire now form ...</p>
+                </div>
             </div>
 
             <!-- Rates -->
-            <div id="rates-wrapper">
-                <div id="rates-head">
+            <div id="rates-wrapper" class="container-fluid">
+                <div id="rates-head" class="">
                     <h4>The Rates</h4>
                     <p> 
                         Lorem ipsum dolor sit amet, consectetur adipisicing
@@ -101,59 +133,127 @@
                     </p>
                 </div>
 
-                <div id="rates-table">
-                    <p>table</p>
+                <div id="rates-table" class="col-xs-12">
+                    <div class="row">
+                        <div class="col-xs-6">one</div>
+                        <div class="col-xs-6">two</div>
+                    </div>
+                    
+                    <div class="row">
+                        <div class="col-xs-6">three</div>
+                        <div class="col-xs-6">four</div>
+                    </div>
+
+                    <div class="row">
+                        <div class="col-xs-6">five</div>
+                        <div class="col-xs-6">six</div>
+                    </div>
                 </div>
             </div>
 
             <!-- Facilities -->
-            <div id="facilities-wrapper">
+            <div id="facilities-wrapper" class="container-fluid">
                 <div id="facilities-title">
-                    <h4>The Facilities</h4>
+                    <div class="col-xs-10 col-xs-offset-1">
+                        <h4>The Facilities</h4>
+                    </div>
                 </div>
 
                 <div id="major-icons">
-                    <p>major icons</p>
+                    <div class="row"></div>
+                        <div class="col-xs-6">one</div>
+                        <div class="col-xs-6">two</div>
+                    </div>
+                    <div class="row"></div>
+                        <div class="col-xs-6">three</div>
+                        <div class="col-xs-6">four</div>
+                    </div>
+                    <div class="row"></div>
+                        <div class="col-xs-6">five</div>
+                        <div class="col-xs-6">six</div>
+                    </div>
                 </div>
 
-                <div id="minor-icons">
-                    <p>minor icons</p>
+                <div id="minor-icons" class="col-xs-10 col-xs-offset-1">
+                    <div class="row">
+                        <div class="col-xs-6">one</div>
+                        <div class="col-xs-6">two</div>
+                    </div>
+                    <div class="row">
+                        <div class="col-xs-6">three</div>
+                        <div class="col-xs-6">four</div>
+                    </div>
+                    <div class="row">
+                        <div class="col-xs-6">five</div>
+                        <div class="col-xs-6">six</div>
+                    </div>
+                    <div class="row">
+                        <div class="col-xs-6">seven</div>
+                        <div class="col-xs-6">eight</div>
+                    </div>
+                    <div class="row">
+                        <div class="col-xs-6">nine</div>
+                        <div class="col-xs-6">ten</div>
+                    </div>
+                    <div class="row">
+                        <div class="col-xs-6">eleven</div>
+                        <div class="col-xs-6">twelve</div>
+                    </div>
+                    <div class="row">
+                        <div class="col-xs-6">thirteen</div>
+                        <div class="col-xs-6">fourteen</div>
+                    </div>
+                    <div class="row">
+                        <div class="col-xs-6">fiveteen</div>
+                        <div class="col-xs-6">sixteen</div>
+                    </div>
+                    <div class="row">
+                        <div class="col-xs-6">seventeen</div>
+                        <div class="col-xs-6">eighteen</div>
+                    </div>
+                    <div class="row">
+                        <div class="col-xs-6">nineteen</div>
+                        <div class="col-xs-6">twenty</div>
+                    </div>
                 </div>
             </div>
 
             <!-- Location -->
-            <div id="location-wrapper">
+            <div id="location-wrapper" class="container-fluid">
                 <div id="location-title">
-                    <div id="location-title">
+                    <div id="location-title" class="col-xs-10 col-xs-offset-1">
                         <h4>The Location</h4>
                     </div>
 
-                    <div id="location-map">
+                    <div id="location-map" class="col-xs-12">
                         <p>Map</p>
                     </div>
 
-                    <p> 
-                        Lorem ipsum dolor sit amet, consectetur adipisicing
-                        elit, sed do eiusmod tempor incididunt ut labore et dolore
-                        magna aliqua. Ut enim ad minim veniam, quis nostrud
-                        exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                        consequat. Duis aute irure dolor in reprehenderit in
-                        voluptate velit esse cillum dolore eu fugiat nulla
-                        pariatur. Excepteur sint occaecat cupidatat non proident,
-                        sunt in culpa qui officia deserunt mollit anim id est
-                        laborum.  
-                    </p>
-
-                    <div id="walking-times">
-                        <h5>Walking times</h5>
-                        <p>Walking icons</p>
+                    <div class="col-xs-6">
+                        <p> 
+                            Lorem ipsum dolor sit amet, consectetur adipisicing
+                            elit, sed do eiusmod tempor incididunt ut labore et dolore
+                            magna aliqua. Ut enim ad minim veniam, quis nostrud
+                            exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                            consequat. Duis aute irure dolor in reprehenderit in
+                            voluptate velit esse cillum dolore eu fugiat nulla
+                            pariatur. Excepteur sint occaecat cupidatat non proident,
+                            sunt in culpa qui officia deserunt mollit anim id est
+                            laborum.  
+                        </p>
+                    </div>
+                    <div class="col-xs-6">
+                        <div id="walking-times">
+                            <h5>Walking times</h5>
+                            <p>Walking icons</p>
+                        </div>
                     </div>
                 </div>
             </div>
 
             <!-- Contact Us -->
-            <div id="contact-us-wrapper">
-                <div id="contact-title">
+            <div id="contact-us-wrapper" class="container-fluid">
+                <div id="contact-title" class="col-xs-10 col-xs-offset-1">
                     <h4>Contact Us</h4>
                 </div>
 
