add typekit script links from Ray

--- a/index.html
+++ b/index.html
@@ -265,6 +265,11 @@
 
     <script src="./assets/javascripts/jquery.min.js"></script>
     <script src="./assets/javascripts/bootstrap.min.js"></script>
+
+    <!-- typekit fonts -->
+    <script src="//use.typekit.net/sho8rjy.js"></script>
+    <script>try{Typekit.load();}catch(e){}</script>     
+
     <script src="./assets/javascripts/app.js"></script>
     </body>
 </html>
