--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
 
             <!-- header -->
             <div id="menu-wrapper" class="container-fluid">
-                <div id="menu-logo" class="col-xs-10 col-xs-offset-1">
-                    <div class="col-xs-6 col-xs-offset-3">
+                <div id="menu-logo" class="col-xs-8 col-xs-offset-2">
+                    <div class="col-xs-3">
                         <p>Bar chart</p>
                     </div>
-                    <div class="col-xs-8 col-xs-offset-2">
+                    <div class="col-xs-8">
                         <h4>Cregane Hall</h4>
                     </div>
                 </div>
