--- a/index.html
+++ b/index.html
@@ -38,8 +38,12 @@
             <!-- About -->
             <div id="about-wrapper" class="container-fluid">
                 <div id="about-logo" class="col-xs-10 col-xs-offset-1">
-                    <p>Bar chart</p>
-                    <h4>About Cregane Hall</h4>
+                    <div class="col-xs-3 col-xs-offset-4">
+                        <p>Bar chart</p>
+                    </div>
+                    <div class="col-xs-12">
+                        <h4>About Cregane Hall</h4>
+                    </div>
                 </div>
 
                 <div id="about-text" class="col-xs-10 col-xs-offset-1">
@@ -60,7 +64,7 @@
                     <p>Carousel</p>
                 </div>
 
-                <div id="about-footer">
+                <div id="about-footer" class="col-xs-12">
                     <div class="col-xs-10 col-xs-offset-1">
                         <h4 id="address">Farranlea Road, Bishopstown, Cork.</h4>
                     </div>
