--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
             <!-- Rooms -->
             <div id="rooms-wrapper" class="container-fluid">
-                <div id="room-image">
+                <div id="room-image" class="col-xs-12">
                     <div class="col-xs-12">
                         <p>image</p>
                     </div>
@@ -163,16 +163,16 @@
                     </div>
                 </div>
 
-                <div id="major-icons">
-                    <div class="row"></div>
-                        <div class="col-xs-6">one</div>
+                <div id="major-icons" class="col-xs-12">
+                    <div class="row">
+                        <div class="col-xs-6"><p>one</p></div>
                         <div class="col-xs-6">two</div>
                     </div>
-                    <div class="row"></div>
+                    <div class="row">
                         <div class="col-xs-6">three</div>
                         <div class="col-xs-6">four</div>
                     </div>
-                    <div class="row"></div>
+                    <div class="row">
                         <div class="col-xs-6">five</div>
                         <div class="col-xs-6">six</div>
                     </div>
