--- a/index.html
+++ b/index.html
@@ -22,11 +22,8 @@
             <!-- header -->
             <div id="menu-wrapper" class="container-fluid">
                 <div id="menu-logo" class="col-xs-8 col-xs-offset-2">
-                    <div class="col-xs-3">
-                        <p>Bar chart</p>
-                    </div>
-                    <div class="col-xs-8">
-                        <h4>Cregane Hall</h4>
+                    <div class="col-xs-8 col-xs-offset-2">
+                        <h4>Logo</h4>
                     </div>
                 </div>
 
