--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <div id="about-wrapper" class="container-fluid">
                 <div id="about-logo" class="col-xs-10 col-xs-offset-1">
                     <div class="col-xs-3 col-xs-offset-4">
-                        <p>Bar chart</p>
+                        <p>Logo</p>
                     </div>
                     <div class="col-xs-12">
                         <h4>About Cregane Hall</h4>
