--- a/index.html
+++ b/index.html
@@ -58,7 +58,21 @@
                 </div>
 
                 <div id="about-carousel" class="col-xs-12">
-                    <p>Carousel</p>
+                    <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+                        <!-- Wrapper for slides -->
+                        <div class="carousel-inner" role="listbox">
+                            <div class="item active">
+                                <img src="http://dummyimage.com/360x360/000/fff&text=dummy-image" alt="@todo">
+                            </div>
+
+                            <div class="item">
+                                <img src="http://dummyimage.com/360x360/000/fff&text=dummy-image" alt="@todo">
+                            </div>
+
+                            <div class="item">
+                                <img src="http://dummyimage.com/360x360/000/fff&text=dummy-image" alt="@todo">
+                            </div>
+                        </div>
                 </div>
 
                 <div id="about-footer" class="col-xs-12">
