--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 </div>
 
                 <div id="about-text" class="col-xs-10 col-xs-offset-1">
-                    <p> 
+                    <p>
                         Lorem ipsum dolor sit amet, consectetur adipisicing
                         elit, sed do eiusmod tempor incididunt ut labore et dolore
                         magna aliqua. Ut enim ad minim veniam, quis nostrud
@@ -53,7 +53,7 @@
                         voluptate velit esse cillum dolore eu fugiat nulla
                         pariatur. Excepteur sint occaecat cupidatat non proident,
                         sunt in culpa qui officia deserunt mollit anim id est
-                        laborum.  
+                        laborum.
                     </p>
                 </div>
 
@@ -73,6 +73,15 @@
                                 <img src="http://dummyimage.com/360x360/000/fff&text=dummy-image" alt="@todo">
                             </div>
                         </div>
+
+                        <!-- Slide navigation -->
+                        <a class="carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+                            <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+                        </a>
+                        <a class="carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+                            <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+                        </a>
+                    </div>
                 </div>
 
                 <div id="about-footer" class="col-xs-12">
@@ -101,7 +110,7 @@
                             voluptua. At vero eos et accusam et justo duo
                             dolores et ea rebum. Stet clita kasd gubergren, no
                             sea takimata sanctus est Lorem ipsum dolor sit
-                            amet. 
+                            amet.
                         </p>
                     </div>
                 </div>
@@ -135,7 +144,7 @@
             <div id="rates-wrapper" class="container-fluid">
                 <div id="rates-head" class="">
                     <h4>The Rates</h4>
-                    <p> 
+                    <p>
                         Lorem ipsum dolor sit amet, consectetur adipisicing
                         elit, sed do eiusmod tempor incididunt ut labore et dolore
                         magna aliqua. Ut enim ad minim veniam, quis nostrud
@@ -144,7 +153,7 @@
                         voluptate velit esse cillum dolore eu fugiat nulla
                         pariatur. Excepteur sint occaecat cupidatat non proident,
                         sunt in culpa qui officia deserunt mollit anim id est
-                        laborum.  
+                        laborum.
                     </p>
                 </div>
 
@@ -153,7 +162,7 @@
                         <div class="col-xs-6">one</div>
                         <div class="col-xs-6">two</div>
                     </div>
-                    
+
                     <div class="row">
                         <div class="col-xs-6">three</div>
                         <div class="col-xs-6">four</div>
@@ -245,7 +254,7 @@
                     </div>
 
                     <div class="col-xs-6">
-                        <p> 
+                        <p>
                             Lorem ipsum dolor sit amet, consectetur adipisicing
                             elit, sed do eiusmod tempor incididunt ut labore et dolore
                             magna aliqua. Ut enim ad minim veniam, quis nostrud
@@ -254,7 +263,7 @@
                             voluptate velit esse cillum dolore eu fugiat nulla
                             pariatur. Excepteur sint occaecat cupidatat non proident,
                             sunt in culpa qui officia deserunt mollit anim id est
-                            laborum.  
+                            laborum.
                         </p>
                     </div>
                     <div class="col-xs-6">
@@ -283,7 +292,7 @@
 
     <!-- typekit fonts -->
     <script src="//use.typekit.net/sho8rjy.js"></script>
-    <script>try{Typekit.load();}catch(e){}</script>     
+    <script>try{Typekit.load();}catch(e){}</script>
 
     <script src="./assets/javascripts/app.js"></script>
     </body>
