leave todo for navigation. it looks tricky

--- a/index.html
+++ b/index.html
@@ -75,12 +75,7 @@
                         </div>
 
                         <!-- Slide navigation -->
-                        <a class="carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
-                            <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-                        </a>
-                        <a class="carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
-                            <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-                        </a>
+                        <!-- @todo -->
                     </div>
                 </div>
 
