--- a/index.html
+++ b/index.html
@@ -95,17 +95,14 @@
             <div id="rooms-wrapper" class="container-fluid">
                 <div id="room-image" class="col-xs-12">
                     <div class="col-xs-12">
-                        <p>image</p>
+                        <img src="http://dummyimage.com/360x180/000/fff&text=dummy-image" alt="@todo">
                     </div>
-                    <div class="col-xs-10 col-xs-offset-1">
+                    <div id="room-image-text" class="col-xs-10 col-xs-offset-1">
                         <p>
                             Lorem ipsum dolor sit amet, consetetur sadipscing
                             elitr, sed diam nonumy eirmod tempor invidunt ut
                             labore et dolore magna aliquyam erat, sed diam
-                            voluptua. At vero eos et accusam et justo duo
-                            dolores et ea rebum. Stet clita kasd gubergren, no
-                            sea takimata sanctus est Lorem ipsum dolor sit
-                            amet.
+                            voluptua.
                         </p>
                     </div>
                 </div>
