add title centering + dummy images

--- a/index.html
+++ b/index.html
@@ -115,12 +115,20 @@
 
                 <div id="rooms-4-way-img">
                     <div class="row">
-                        <div class="col-xs-6">one</div>
-                        <div class="col-xs-6">two</div>
+                        <div class="col-xs-6">
+                            <img src="http://dummyimage.com/180x180/000/fff&text=dummy-image" alt="@todo">
+                        </div>
+                        <div class="col-xs-6">
+                            <img src="http://dummyimage.com/180x180/000/fff&text=dummy-image" alt="@todo">
+                        </div>
                     </div>
                     <div class="row">
-                        <div class="col-xs-6">three</div>
-                        <div class="col-xs-6">four</div>
+                        <div class="col-xs-6">
+                            <img src="http://dummyimage.com/180x180/000/fff&text=dummy-image" alt="@todo">
+                        </div>
+                        <div class="col-xs-6">
+                            <img src="http://dummyimage.com/180x180/000/fff&text=dummy-image" alt="@todo">
+                        </div>
                     </div>
                 </div>
             </div>
