--- a/index.html
+++ b/index.html
@@ -62,15 +62,15 @@
                         <!-- Wrapper for slides -->
                         <div class="carousel-inner" role="listbox">
                             <div class="item active">
-                                <img src="http://dummyimage.com/360x360/000/fff&text=dummy-image" alt="@todo">
+                                <img class="img-reponsive" src="http://dummyimage.com/360x360/000/fff&text=dummy-image" alt="@todo">
                             </div>
 
                             <div class="item">
-                                <img src="http://dummyimage.com/360x360/000/fff&text=dummy-image" alt="@todo">
+                                <img class="img-responsive" src="http://dummyimage.com/360x360/000/fff&text=dummy-image" alt="@todo">
                             </div>
 
                             <div class="item">
-                                <img src="http://dummyimage.com/360x360/000/fff&text=dummy-image" alt="@todo">
+                                <img class="img-reponsive" src="http://dummyimage.com/360x360/000/fff&text=dummy-image" alt="@todo">
                             </div>
                         </div>
 
@@ -95,7 +95,7 @@
             <div id="rooms-wrapper" class="container-fluid">
                 <div id="room-image" class="col-xs-12">
                     <div class="col-xs-12">
-                        <img src="http://dummyimage.com/360x180/000/fff&text=dummy-image" alt="@todo">
+                        <img class="reponsive" src="http://dummyimage.com/360x180/000/fff&text=dummy-image" alt="@todo">
                     </div>
                     <div id="room-image-text" class="col-xs-10 col-xs-offset-1">
                         <p>
@@ -116,18 +116,18 @@
                 <div id="rooms-4-way-img">
                     <div class="row">
                         <div class="col-xs-6">
-                            <img src="http://dummyimage.com/180x180/000/fff&text=dummy-image" alt="@todo">
+                            <img class="reponsive" src="http://dummyimage.com/180x180/000/fff&text=dummy-image" alt="@todo">
                         </div>
                         <div class="col-xs-6">
-                            <img src="http://dummyimage.com/180x180/000/fff&text=dummy-image" alt="@todo">
+                            <img class="reponsive" src="http://dummyimage.com/180x180/000/fff&text=dummy-image" alt="@todo">
                         </div>
                     </div>
                     <div class="row">
                         <div class="col-xs-6">
-                            <img src="http://dummyimage.com/180x180/000/fff&text=dummy-image" alt="@todo">
+                            <img class="reponsive" src="http://dummyimage.com/180x180/000/fff&text=dummy-image" alt="@todo">
                         </div>
                         <div class="col-xs-6">
-                            <img src="http://dummyimage.com/180x180/000/fff&text=dummy-image" alt="@todo">
+                            <img class="reponsive" src="http://dummyimage.com/180x180/000/fff&text=dummy-image" alt="@todo">
                         </div>
                     </div>
                 </div>
