--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                     </div>
                 </div>
 
-                <div id="room-title">
+                <div id="room-title" class="col-xs-12">
                     <div class="col-xs-10 col-xs-offset-1">
                         <h4>The Rooms</h4>
                     </div>
